B-F Sandbox Full-Backup/src/objects/Price_Tolerance__c.object
<CustomObject>
    <description>Price Tolerance - Control Table Used used for the sole purpose of ensuring that Price Over rides are within Tolerance</description>
    <fields>
        <fullName>Banner_Partner__c</fullName>
        <description>Banner Partner</description>
        <label>Banner Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_State_Description__c</fullName>
        <description>Banner State Description</description>
        <label>Banner State Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_PA_Per_Case__c</fullName>
        <description>Max PA $ Per Case</description>
        <label>Max PA $ Per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRM_Units_Per_Case__c</fullName>
        <label>PRM Units Per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Material_Description__c</fullName>
        <description>Price Ref Material Description</description>
        <label>Price Ref Material Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Material__c</fullName>
        <description>Price Ref Material</description>
        <label>Price Ref Material</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Price Tolerance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Banner_Partner__c</columns>
        <columns>Price_Ref_Material_Description__c</columns>
        <columns>Max_PA_Per_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PT-{0}</displayFormat>
        <label>Price Tolerance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Tolerance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>